--- a/weather/index.html
+++ b/weather/index.html
@@ -32,6 +32,11 @@
       pointer-events: none;
       box-sizing: border-box;
     }
+
+    #viz {
+      margin: 0 auto;
+      width: 80%;
+    }
   </style>
 </head>
 <body>
