--- a/weather/index.html
+++ b/weather/index.html
@@ -1,48 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather</title>
   <style>
-    text {
-      font-size: 10px;
+    body {
+      font-family: 'Lato', sans-serif;
+      color: #333;
     }
+
+    .date {
+      font-weight: bold;
+    }
+
     .line {
-		  fill: none;
-		  stroke: #a2c0d9;
-		  stroke-width: 2px;
-		}
-		.area {
-		  fill: url(#area-gradient);
-		  stroke-width: 0px;
-		}
-    .y-axis .domain, .tick line {
+      fill: none;
+      stroke: #a2c0d9;
+      stroke-width: 2px;
+    }
+
+    .y-axis .domain,
+    .tick line {
       display: none;
     }
-    .svg-tooltip {
-      background: rgba(80, 80, 80, .9);
-      color: #fff;
-      display: block;
-      padding: .2rem .4rem;
-      border-radius: .1rem;
-      position: absolute;
-      z-index: 1;
-      visibility: hidden;
+
+    .x-axis .domain {
+      stroke: #aaa;
+    }
+
+    .x-axis text, .y-axis text {
+      color: #999;
+    }
+
+    .tooltip {
       pointer-events: none;
-      box-sizing: border-box;
+      text-anchor: middle;
+    }
+
+    .vertical-line {
+      pointer-events: none;
     }
 
     #viz {
       margin: 0 auto;
       width: 80%;
     }
+
+    .area {
+      fill: #eee;
+    }
   </style>
 </head>
+
 <body>
   <div id="viz"></div>
-  
+
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="scripts.js"></script>
 </body>
+
 </html>
