--- a/weather/index.html
+++ b/weather/index.html
@@ -34,9 +34,14 @@
       color: #999;
     }
 
-    .tooltip {
+    .tooltip, .tooltip-text {
       pointer-events: none;
       text-anchor: middle;
+    }
+
+    .tooltip-text {
+      font-size: 10px;
+      fill: #999;
     }
 
     .vertical-line {
