--- a/progress-blog/index.html
+++ b/progress-blog/index.html
@@ -6,12 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Process Blog</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-  <div id="viz"></div>
+  <div id="container">
+    <div id="description">
+      <h1>Recovery Blog</h1>
+      <p>The visualization tracks level of pain and
+        number/types of pills taken to for pain relief in response
+        to a health complication which required
+        surgery on October 7.</p>
+      <p>
+        <span class="circle"></span> IV Pain Relief
+        <span class="circle" style="opacity: 0.75;width: 7px;height: 7px;"></span> Oral Opioids
+        <span class="circle" style="opacity: 0.5;width: 5px;height: 5px;"></span> OTC Pain Relief
+      </p>
+    </div>
+    <div id="viz"></div>
+  </div>
+
   <script src="d3.v6.min.js"></script>
   <script src="index.js"></script>
 </body>
